--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
   
 <nav>
 <ul>
-<li><a href="https://codepen.io/Monica-Celia/pen/RNwERLm"> Info packs y promos </a></li>
-<li><a href="https://codepen.io/Monica-Celia/pen/RNwEgGv"> Transportes </a></li>
-  <li><a href="https://codepen.io/Monica-Celia/pen/RNwERLm"> Extras</a></li>
-  <li><a href="https://codepen.io/Monica-Celia/pen/RNwERLm"> Reseñas</a></li>
+<li><a href="Info packs y promos.html"> Info packs y promos </a></li>
+<li><a href="Transportes.html"> Transportes </a></li>
+  <li><a href="Extras.html"> Extras</a></li>
+  <li><a href="Reseñas.html"> Reseñas</a></li>
 </nav>
 </header>
 
