--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <header>
-<img src="https://manage.wix.com/00beea89-b721-4897-a07c-4bd397efb021" 
+<img src="" 
     alt="Descripción de la imagen" width="300" height="200">
 <h1>M&C VIAJES DE ENSUEÑO</h1>
   
