--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <header>
-<img src="" 
+<img src="M&C" 
     alt="Descripción de la imagen" width="300" height="200">
 <h1>M&C VIAJES DE ENSUEÑO</h1>
   
