--- a/index.html
+++ b/index.html
@@ -5,6 +5,94 @@
 <meta charset="UTF-8">
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<style>
+      body {
+
+font-family: Times New Roman, sans-serif;
+
+margin: 5;
+
+padding: 25px;
+
+  background-color: #efe7da;
+}
+
+header, nav, footer {
+
+background-color: #ff6f61;
+
+padding: 10px;
+
+text-align: center;
+
+}
+
+nav ul {
+
+list-style-type: none;
+
+padding: 0;
+
+}
+
+nav ul li {
+
+display: inline;
+
+margin: 0 10px;
+
+}
+
+nav ul li a {
+
+text-decoration: none;
+
+color: #333;
+
+}
+
+main {
+
+padding: 20px;
+
+}
+
+.section {
+
+margin-bottom: 20px;
+
+}
+
+.section h6 {
+
+margin: 0;
+
+font-size: 1.2em;
+
+}
+
+.image-container {
+
+text-align: center;
+
+margin: 20px 0;
+
+}
+
+footer {
+
+background-color: #ff6f61;
+
+color: #000000;
+
+padding: 10px;
+
+}
+table { border-collapse: collapse; width: 100%; margin: 20px 0; } th, td { border: 1px solid #ddd; padding: 8px; text-align: center; } th { background-color: #f66f61; font-weight: bold; } tr:nth-child(even) { background-color: #efe7da; } tr:hover {
+
+            
+      </style>
       
 </head>
 
