--- a/Extras.html
+++ b/Extras.html
@@ -9,7 +9,69 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <title>PÁGINA WEB DE NOMBRE ALUMNO DE INICIO</title>
+<Style> 
+    body {
+            font-family: Times New Roman, sans-serif;  
+            margin: 0;
+            padding: 0;
+            background-color: #efe7da;
+        }
+        header {
+            background-color: #f66f61;
+            color: black;
+            padding: 20px;
+            text-align: center;
+        }
+        main {
+            padding: 20px;
+        }
+        h2 {
+            color: #f88379;
+        }
+        .option {
+            background-color: white;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            margin-bottom: 20px;
+            padding: 15px;
+        }
+        .option h3 {
+            color: #333;
+        }
+        .option ul {
+            list-style-type: none;
+            padding-left: 0;
+        }
+        .option ul li {
+            margin-bottom: 10px;
+        }
+        footer {
 
+background-color: #ff6f61;
+
+color: #000000;
+
+padding: 10px;
+margin-top: 50px;
+
+}
+   table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
+        }
+        th, td {
+            padding: 10px;
+            text-align: left;
+            border: 3px solid #333;
+        }
+        th {
+            background-color: #ff6f61;
+        }
+        tr:nth-child(even) {
+            background-color: #f9f9f9;
+        }
+</Style>
 
 </head>
 
