--- a/Transportes.html
+++ b/Transportes.html
@@ -64,7 +64,13 @@ padding: 10px;
 <header>
 
 <h1>TRANSPORTES</h1>
-
+<nav>
+<ul>
+<li><a href="Info packs y promos.html"> Info packs y promos </a></li>
+<li><a href="Transportes.html"> Transportes </a></li>
+  <li><a href="Extras.html"> Extras</a></li>
+  <li><a href="Reseñas.html"> Reseñas</a></li>
+</nav>
 </header>
 
 <main>
