--- a/Reseñas.html
+++ b/Reseñas.html
@@ -78,7 +78,13 @@ margin-top: 50px;
 <header>
 
 <h1>RESEÑAS</h1>
-
+<nav>
+<ul>
+<li><a href="Info packs y promos.html"> Info packs y promos </a></li>
+<li><a href="Transportes.html"> Transportes </a></li>
+  <li><a href="Extras.html"> Extras</a></li>
+  <li><a href="Reseñas.html"> Reseñas</a></li>
+</nav>
 </header>
 
 <main>
