Update Info packs y promos.html

--- a/Info packs y promos.html
+++ b/Info packs y promos.html
@@ -102,7 +102,7 @@ table { border-collapse: collapse; width: 100%; margin: 20px 0; } th, td { borde
 <h1>INFO PACKS Y PROMOS</h1>
 <nav>
 <ul>
-<li><a href="Info packs y promos.html"> Info packs y promos </a></li>
+<li><a href="index.html"> M&C Viajes de ensueño</a></li>
 <li><a href="Transportes.html"> Transportes </a></li>
   <li><a href="Extras.html"> Extras</a></li>
   <li><a href="Reseñas.html"> Reseñas</a></li>
