--- a/Reseñas.html
+++ b/Reseñas.html
@@ -83,7 +83,7 @@ margin-top: 50px;
 <li><a href="Info packs y promos.html"> Info packs y promos </a></li>
 <li><a href="Transportes.html"> Transportes </a></li>
   <li><a href="Extras.html"> Extras</a></li>
-  <li><a href="Reseñas.html"> Reseñas</a></li>
+  <li><a href="index.html"> M&C Viajes de ensueño</a></li>
 </nav>
 </header>
 
