--- a/Transportes.html
+++ b/Transportes.html
@@ -54,6 +54,37 @@ color: #000000;
 padding: 10px;
 
 }
+header, nav, footer {
+
+background-color: #ff6f61;
+
+padding: 10px;
+
+text-align: center;
+
+}
+
+nav ul {
+
+list-style-type: none;
+
+padding: 0;
+
+}
+
+nav ul li {
+
+display: inline;
+
+margin: 0 10px;
+
+}
+
+nav ul li a {
+
+text-decoration: none;
+
+color: #333;
 
 </Style>
 
