--- a/Info packs y promos.html
+++ b/Info packs y promos.html
@@ -89,6 +89,37 @@ background-color: #ff6f61;
 color: #000000;
 
 padding: 10px;
+header, nav, footer {
+
+background-color: #ff6f61;
+
+padding: 10px;
+
+text-align: center;
+
+}
+
+nav ul {
+
+list-style-type: none;
+
+padding: 0;
+
+}
+
+nav ul li {
+
+display: inline;
+
+margin: 0 10px;
+
+}
+
+nav ul li a {
+
+text-decoration: none;
+
+color: #333;
 
 }
 table { border-collapse: collapse; width: 100%; margin: 20px 0; } th, td { border: 1px solid #333; padding: 8px; text-align: center; } th { background-color: #f66f61; font-weight: bold; } tr:nth-child(even) { background-color: #efe7da; } tr:hover {</Style>
