--- a/Extras.html
+++ b/Extras.html
@@ -71,6 +71,38 @@ margin-top: 50px;
         tr:nth-child(even) {
             background-color: #f9f9f9;
         }
+    header, nav, footer {
+
+background-color: #ff6f61;
+
+padding: 10px;
+
+text-align: center;
+
+}
+
+nav ul {
+
+list-style-type: none;
+
+padding: 0;
+
+}
+
+nav ul li {
+
+display: inline;
+
+margin: 0 10px;
+
+}
+
+nav ul li a {
+
+text-decoration: none;
+
+color: #333;
+}
 </Style>
 
 </head>
