--- a/Reseñas.html
+++ b/Reseñas.html
@@ -168,6 +168,7 @@ color: #333;
     </tr>
   </tbody>
 </table>
+   <img src="https://st5.depositphotos.com/37530512/66061/v/950/depositphotos_660616696-stock-illustration-bahamas-islands-highly-detailed-physical.jpg" alt="Descripción de la imagen" width="150" height="120">
   
 <footer>
 
