--- a/Reseñas.html
+++ b/Reseñas.html
@@ -168,11 +168,11 @@ color: #333;
     </tr>
   </tbody>
 </table>
-   <p> Las Bahamas ‎ ‎ ‎‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎París‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎‎ ‎ ‎ ‎ ‎ ‎  ‎ ‎ ‎‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎‎ ‎‎ ‎‎ ‎ ‎ ‎ ‎ ‎ ‎‎ ‎ ‎ ‎ ‎ ‎Luxemburgo‎ ‎ ‎ ‎ ‎ ‎  ‎ ‎‎ ‎ ‎ ‎ ‎ ‎ ‎‎ ‎ ‎ ‎ ‎‎ ‎ ‎ ‎  ‎ ‎ ‎ ‎ ‎‎ ‎ ‎ ‎ ‎ ‎Wellington‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎‎  ‎ ‎ ‎ ‎ ‎ ‎‎ ‎ ‎ ‎‎ ‎‎ ‎ ‎ ‎ ‎ ‎ ‎‎ ‎ ‎ ‎ ‎ ‎Santorini</P>
+   <p> Las Bahamas ‎ ‎ ‎‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎‎ ‎ ‎ ‎París‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎‎ ‎ ‎ ‎ ‎ ‎  ‎ ‎ ‎‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎‎ ‎‎ ‎‎ ‎ ‎ ‎ ‎ ‎ ‎‎ ‎ ‎ ‎ ‎ ‎Luxemburgo‎ ‎ ‎ ‎ ‎ ‎  ‎ ‎‎ ‎ ‎ ‎ ‎ ‎ ‎‎ ‎ ‎ ‎ ‎‎ ‎ ‎ ‎  ‎ ‎ ‎ ‎ ‎‎ ‎ ‎ ‎ ‎ ‎Wellington‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎‎  ‎ ‎ ‎ ‎ ‎ ‎‎ ‎ ‎ ‎‎ ‎‎ ‎ ‎ ‎ ‎ ‎ ‎‎ ‎ ‎ ‎ ‎ ‎Santorini</P>
    <img src="https://cdn3d.iconscout.com/3d/premium/thumb/calificacion-cinco-estrellas-11573687-9450503.png?f=webp" alt="Descripción de la imagen" width="150" height="85">
    <img src="https://cdn3d.iconscout.com/3d/premium/thumb/calificacion-de-cuatro-estrellas-11573688-9450504.png?f=webp" alt="Descripción de la imagen" width="150" height="85">
    <img src="https://cdn3d.iconscout.com/3d/premium/thumb/calificacion-de-cuatro-estrellas-11573688-9450504.png?f=webp" alt="Descripción de la imagen" width="150" height="85">
-   <img src="https://png.pngtree.com/png-vector/20220609/ourmid/pngtree-three-3-star-rank-background-png-image_4833765.png" alt="Descripción de la imagen" width="150" height="85">
+   <img src="https://cdn3d.iconscout.com/3d/premium/thumb/calificacion-de-cuatro-estrellas-11573688-9450504.png?f=webp" alt="Descripción de la imagen" width="150" height="85">
    <img src="https://cdn3d.iconscout.com/3d/premium/thumb/calificacion-cinco-estrellas-11573687-9450503.png?f=webp" alt="Descripción de la imagen" width="150" height="85">
 
 <footer>
