--- a/Reseñas.html
+++ b/Reseñas.html
@@ -168,13 +168,28 @@ color: #333;
     </tr>
   </tbody>
 </table>
-   <p> Las Bahamas ‎ ‎ ‎‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎‎ ‎ ‎ ‎París‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎‎ ‎ ‎ ‎ ‎ ‎  ‎ ‎ ‎‎ ‎ ‎ ‎ ‎ ‎ ‎‎ ‎Luxemburgo‎ ‎ ‎ ‎ ‎ ‎  ‎ ‎‎ ‎ ‎ ‎ ‎ ‎ ‎‎ ‎ ‎ ‎   ‎Wellington‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎‎  ‎ ‎ ‎ ‎ ‎ ‎‎ ‎ ‎ ‎‎ ‎‎ ‎ ‎‎Santorini</P>
-   <img src="https://cdn3d.iconscout.com/3d/premium/thumb/calificacion-cinco-estrellas-11573687-9450503.png?f=webp" alt="Descripción de la imagen" width="150" height="85">
-   <img src="https://cdn3d.iconscout.com/3d/premium/thumb/calificacion-de-cuatro-estrellas-11573688-9450504.png?f=webp" alt="Descripción de la imagen" width="150" height="85">
-   <img src="https://cdn3d.iconscout.com/3d/premium/thumb/calificacion-de-cuatro-estrellas-11573688-9450504.png?f=webp" alt="Descripción de la imagen" width="150" height="85">
-   <img src="https://cdn3d.iconscout.com/3d/premium/thumb/calificacion-de-cuatro-estrellas-11573688-9450504.png?f=webp" alt="Descripción de la imagen" width="150" height="85">
-   <img src="https://cdn3d.iconscout.com/3d/premium/thumb/calificacion-cinco-estrellas-11573687-9450503.png?f=webp" alt="Descripción de la imagen" width="150" height="85">
-
+<div class="ratings-container">
+  <div class="rating-block">
+    <p>Las Bahamas</p>
+    <div class="stars">★★★★★</div>
+  </div>
+  <div class="rating-block">
+    <p>París</p>
+    <div class="stars">★★★☆☆</div>
+  </div>
+  <div class="rating-block">
+    <p>Luxemburgo</p>
+    <div class="stars">★★★★☆</div>
+  </div>
+  <div class="rating-block">
+    <p>Wellington</p>
+    <div class="stars">★★★★☆</div>
+  </div>
+  <div class="rating-block">
+    <p>Santorini</p>
+    <div class="stars">★★★★★</div>
+  </div>
+</div>
 <footer>
 <p>IG: viajes_ensueno_mc</p>
 <p>Teléfono: 677859324</p>
