--- a/Reseñas.html
+++ b/Reseñas.html
@@ -99,8 +99,28 @@ nav ul li a {
 
 text-decoration: none;
 
-color: #333;
+color: #333;}
+.ratings-container {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 30px;
+  font-family: Arial, sans-serif;
+}
 
+.rating-block {
+  text-align: center;
+}
+
+.rating-block p {
+  margin: 0 0 5px;
+  font-weight: bold;
+}
+
+.stars {
+  font-size: 24px;
+  color: goldenrod;
+  letter-spacing: 3px;
+}
 </Style>
 
 </head>
