--- a/Info packs y promos.html
+++ b/Info packs y promos.html
@@ -19,7 +19,29 @@ margin: 5;
 padding: 25px;
   background-color: #efe7da;
 }
-
+main {
+            padding: 20px;
+        }
+        h2 {
+            color: #f88379;
+        }
+        .option {
+            background-color: white;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            margin-bottom: 20px;
+            padding: 15px;
+        }
+        .option h3 {
+            color: #333;
+        }
+        .option ul {
+            list-style-type: none;
+            padding-left: 0;
+        }
+        .option ul li {
+            margin-bottom: 10px;
+        }
 header, nav, footer {
 
 background-color: #ff6f61;
