--- a/Info packs y promos.html
+++ b/Info packs y promos.html
@@ -10,16 +10,19 @@
 
 <title>PÁGINA WEB DE NOMBRE ALUMNO DE INICIO</title>
 <Style>
-body {
-
-font-family: Times New Roman, sans-serif;
-
-margin: 5;
-
-padding: 25px;
-  background-color: #efe7da;
-}
-main {
+ body {
+            font-family: Times New Roman, sans-serif;  
+            margin: 0;
+            padding: 0;
+          background-color: #efe7da;
+        }
+        header {
+            background-color: #f66f61;
+            color: black;
+            padding: 20px;
+            text-align: center;
+        }
+        main {
             padding: 20px;
         }
         h2 {
@@ -42,75 +45,15 @@ main {
         .option ul li {
             margin-bottom: 10px;
         }
-header, nav, footer {
-
-background-color: #ff6f61;
-
-padding: 10px;
-
-text-align: center;
-
-}
-
-nav ul {
-
-list-style-type: none;
-
-padding: 0;
-
-}
-
-nav ul li {
-
-display: inline;
-
-margin: 0 10px;
-
-}
-
-nav ul li a {
-
-text-decoration: none;
-
-color: #333;
-
-}
-
-main {
-
-padding: 20px;
-
-}
-
-.section {
-
-margin-bottom: 20px;
-
-}
-
-.section h6 {
-
-margin: 0;
-
-font-size: 1.2em;
-
-}
-
-.image-container {
-
-text-align: center;
-
-margin: 20px 0;
-
-}
-
-footer {
+        footer {
 
 background-color: #ff6f61;
 
 color: #000000;
 
 padding: 10px;
+
+}
 header, nav, footer {
 
 background-color: #ff6f61;
@@ -143,8 +86,6 @@ text-decoration: none;
 
 color: #333;
 
-}
-table { border-collapse: collapse; width: 100%; margin: 20px 0; } th, td { border: 1px solid #333; padding: 8px; text-align: center; } th { background-color: #f66f61; font-weight: bold; } tr:nth-child(even) { background-color: #efe7da; } tr:hover {</Style>
 </Style>
 </head>
 
