--- a/index.html
+++ b/index.html
@@ -7,92 +7,51 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
-      body {
-
-font-family: Times New Roman, sans-serif;
-
-margin: 5;
-
-padding: 25px;
-
-  background-color: #efe7da;
+    body {
+  font-family: Arial, sans-serif;
+  background-color: #f4f4f4;
+  color: #333;
+  line-height: 1.6;
+  margin: 0;
+  padding: 0 20px;
 }
 
-header, nav, footer {
-
-background-color: #ff6f61;
-
-padding: 10px;
-
-text-align: center;
-
+h1, h2, h3 {
+  color: #222;
+  margin-top: 1.5em;
 }
 
-nav ul {
-
-list-style-type: none;
-
-padding: 0;
-
+ul {
+  list-style-type: disc;
+  margin-left: 20px;
 }
 
-nav ul li {
-
-display: inline;
-
-margin: 0 10px;
-
+li {
+  margin-bottom: 0.5em;
 }
 
-nav ul li a {
-
-text-decoration: none;
-
-color: #333;
-
+strong {
+  color: #000;
 }
 
-main {
-
-padding: 20px;
-
+a {
+  color: #007BFF;
+  text-decoration: none;
 }
 
-.section {
-
-margin-bottom: 20px;
-
+a:hover {
+  text-decoration: underline;
 }
 
-.section h6 {
-
-margin: 0;
-
-font-size: 1.2em;
-
+section {
+  background-color: #fff;
+  padding: 20px;
+  margin: 20px auto;
+  border-radius: 8px;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+  max-width: 800px;
 }
-
-.image-container {
-
-text-align: center;
-
-margin: 20px 0;
-
-}
-
-footer {
-
-background-color: #ff6f61;
-
-color: #000000;
-
-padding: 10px;
-
-}
-table { border-collapse: collapse; width: 100%; margin: 20px 0; } th, td { border: 1px solid #ddd; padding: 8px; text-align: center; } th { background-color: #f66f61; font-weight: bold; } tr:nth-child(even) { background-color: #efe7da; } tr:hover {
-
-            
-      </style>
+</style>
       
 </head>
 
