--- a/Reseñas.html
+++ b/Reseñas.html
@@ -130,7 +130,7 @@ color: #333;}
 <header>
 
 <h1>RESEÑAS</h1>
-<img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/21/d8/5e/a7/caption.jpg?w=500&h=400&s=1" alt="Descripción de la imagen" width="300" height="200">
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ5TBtI704P0G_34mgb7ljh6Jladp7-I_sm-Q&s" alt="Descripción de la imagen" width="300" height="200">
 <nav>
 <ul>
 <li><a href="Info packs y promos.html"> Info packs y promos </a></li>
